--- a/.github/workflows/cd-to-alibaba.yml
+++ b/.github/workflows/cd-to-alibaba.yml
@@ -1,8 +1,9 @@
 
     on:
-      push: 
-        branches:
-          - main
+      workflow_run:
+        workflows: [CiWorkflow::]
+        types:
+          - completed
 
     jobs:
       deoly-to-alibaba:
