--- a/.github/workflows/CiWorkFlow.yml
+++ b/.github/workflows/CiWorkFlow.yml
@@ -48,4 +48,4 @@ jobs:
           push: true
           tags: 
             mohammedmustaf/python:latest
-            mohammedmustaf/python:${{github.sha:7}}
+            mohammedmustaf/python:${{github.sha}}
