--- a/.github/workflows/cd-to-alibaba.yml
+++ b/.github/workflows/cd-to-alibaba.yml
@@ -1,7 +1,7 @@
 
     on:
       workflow_run:
-        workflows: [CiWorkflow::]
+        workflows: ["CiWorkflow"]
         types:
           - completed
 
